--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,177 @@
-@import-normalize; /* bring in normalize.css styles */
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --section-overlay: rgba(0, 0, 0, 0.7);
+  --background-overlay: rgba(0, 0, 0, 0.2);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin:0;
+  padding: 0;
+}
+
+
+
+.app {
+  width: 100%;
+  background-size: cover;
+  background: no-repeat center fixed;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-sizing: border-box;
+}
+
+.overlay {
+  width: 100%;
+  background-color: var(--background-overlay);
+}
+
+.container {
+  max-width: 800px;
+  // height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  // padding: 1rem;
+}
+
+/* Top  */
+
+.section {
+  width: 100%;
+  border-radius: 0.4rem;
+  color: white;
+}
+
+.section__inputs,
+.section__temperature {
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--section-overlay);
+}
+
+.section__inputs{
+  margin-top: 10px;
+}
+
+.section__inputs > input {
+  border: 0.8px solid white;
+  border-radius: 0.4rem;
+  background-color: transparent;
+  color: white;
+  padding: 0.5rem;
+  font-size: 20px;
+  font-weight: 200;
+}
+
+.section__inputs > input:focus, input:hover {
+  outline: 2px solid white;
+
+}
+
+.section__inputs > button {
+  padding: 10px 50px;
+  border: none;
+  border-radius: 00.4rem;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: white;
+}
+
+.section__inputs > button:hover {
+  cursor: pointer;
+  background-color: lightgray;
+}
+
+.icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height:100%;
+}
+
+.icon > h3 {
+  font-size: 15px;
+  font-weight: 200;
+  text-transform: capitalize;
+}
+
+.temperature > h1 {
+  font-size: 60px;
+}
+
+@media screen and (max-width: 440px) {
+  .section {
+    margin-bottom: 20px;
+  }
+  .section__inputs {
+    flex-direction: column;
+    // padding: 10px;
+    &>button{
+      margin-top: 8px;
+    }
+    & *{
+      margin: 8px;
+    }
+  }
+  .section__temperature {
+    & *{
+      margin: 8px;
+
+    }
+    & h1 {
+      font-size: 40px;
+    }
+  }
+}
+
+@media screen and (min-width:441px)  {
+  .container{
+    margin-right: auto;
+    margin-left: auto;
+
+  }
+  .section {
+    margin-bottom: 20px;
+    // &:last-child {
+    //   margin-bottom: 0;
+    // }
+  }
+  .section__inputs {
+
+    &>button{
+      margin-top: 8px;
+    }
+    & *{
+      margin: 8px;
+    }
+  }
+  .section__temperature {
+    & *{
+      margin: 8px;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+  }
+}
+
+@media screen and (min-width:1000px)  {
+  .container{
+    margin-right: auto;
+    margin-left: auto;
+    height: 100vh;
+  }
+  // .section__inputs {
+  //   margin-top: 30px;
+  // }
+}
+
+@media screen and (max-width: 800px) {
+  .container{
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10px;
+  }
 }
