--- a/src/index.scss
+++ b/src/index.scss
@@ -4,11 +4,9 @@
 }
 
 body {
-  margin:0;
+  margin: 0;
   padding: 0;
 }
-
-
 
 .app {
   width: 100%;
@@ -25,7 +23,7 @@ body {
 
 .container {
   max-width: 800px;
-  // height: 100%;
+  height: 100vh;
 
   display: flex;
   align-items: center;
@@ -44,14 +42,13 @@ body {
 
 .section__inputs,
 .section__temperature {
-
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: var(--section-overlay);
 }
 
-.section__inputs{
+.section__inputs {
   margin-top: 10px;
 }
 
@@ -65,9 +62,9 @@ body {
   font-weight: 200;
 }
 
-.section__inputs > input:focus, input:hover {
+.section__inputs > input:focus,
+input:hover {
   outline: 2px solid white;
-
 }
 
 .section__inputs > button {
@@ -89,7 +86,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height:100%;
+  height: 100%;
 }
 
 .icon > h3 {
@@ -109,17 +106,16 @@ body {
   .section__inputs {
     flex-direction: column;
     // padding: 10px;
-    &>button{
+    & > button {
       margin-top: 8px;
     }
-    & *{
+    & * {
       margin: 8px;
     }
   }
   .section__temperature {
-    & *{
+    & * {
       margin: 8px;
-
     }
     & h1 {
       font-size: 40px;
@@ -127,11 +123,10 @@ body {
   }
 }
 
-@media screen and (min-width:441px)  {
-  .container{
+@media screen and (min-width: 441px) {
+  .container {
     margin-right: auto;
     margin-left: auto;
-
   }
   .section {
     margin-bottom: 20px;
@@ -140,16 +135,15 @@ body {
     // }
   }
   .section__inputs {
-
-    &>button{
+    & > button {
       margin-top: 8px;
     }
-    & *{
+    & * {
       margin: 8px;
     }
   }
   .section__temperature {
-    & *{
+    & * {
       margin: 8px;
       margin-left: 30px;
       margin-right: 30px;
@@ -157,8 +151,8 @@ body {
   }
 }
 
-@media screen and (min-width:1000px)  {
-  .container{
+@media screen and (min-width: 1000px) {
+  .container {
     margin-right: auto;
     margin-left: auto;
     height: 100vh;
@@ -169,7 +163,7 @@ body {
 }
 
 @media screen and (max-width: 800px) {
-  .container{
+  .container {
     margin-right: auto;
     margin-left: auto;
     padding: 10px;
